[gd_scene load_steps=8 format=3 uid="uid://csknt8sog75ot"]

[ext_resource type="Script" uid="uid://cyb572o24bsyp" path="res://scripts/blood.gd" id="1_e0mt6"]
[ext_resource type="Script" uid="uid://c5tqi3n8khf34" path="res://scripts/sample.gd" id="2_fytlh"]
[ext_resource type="Texture2D" uid="uid://cm4gqnxmdx65g" path="res://ui/vialofblood.png" id="2_pw0hm"]
[ext_resource type="Script" uid="uid://dlvbbeniian66" path="res://scripts/serum.gd" id="3_4qvlo"]
[ext_resource type="Texture2D" uid="uid://b5hirkjs0l56k" path="res://levels/bloodtestserum.png" id="5_1opai"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e0mt6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u0f2y"]

[node name="Node2D" type="Node2D"]
top_level = true
script = ExtResource("1_e0mt6")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HintText" type="Label" parent="UI"]
offset_right = 40.0
offset_bottom = 23.0

[node name="FinishButton" type="Button" parent="UI"]
offset_left = 389.0
offset_top = 194.0
offset_right = 443.0
offset_bottom = 225.0
scale = Vector2(6.7007346, 6.244503)
text = "Finish"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(582, 73)
scale = Vector2(3.1428683, 11.1808605)
script = ExtResource("2_fytlh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_e0mt6")

[node name="BloodSample" type="Sprite2D" parent="Area2D"]
scale = Vector2(0.31818068, 0.08943856)
texture = ExtResource("2_pw0hm")

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2(126.000015, 494)
scale = Vector2(6.3905873, 5.9186482)
script = ExtResource("3_4qvlo")
serum_id = "A"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(13.613771, 0)
scale = Vector2(0.6996869, 1.3303616)
shape = SubResource("CapsuleShape2D_u0f2y")

[node name="AntiA" type="Sprite2D" parent="Area2D2"]
scale = Vector2(0.08826742, 0.08604916)
texture = ExtResource("5_1opai")

[node name="Area2D4" type="Area2D" parent="."]
position = Vector2(492.00006, 493.00003)
scale = Vector2(6.292467, 6.552145)
script = ExtResource("3_4qvlo")
serum_id = "B"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D4"]
position = Vector2(13.613771, 0)
scale = Vector2(0.6996869, 1.3303616)
shape = SubResource("CapsuleShape2D_u0f2y")

[node name="AntiA" type="Sprite2D" parent="Area2D4"]
scale = Vector2(0.08826742, 0.08604916)
texture = ExtResource("5_1opai")

[node name="Area2D3" type="Area2D" parent="."]
position = Vector2(943.00006, 496)
scale = Vector2(6.2523813, 6.411112)
script = ExtResource("3_4qvlo")
serum_id = "Rh"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2(0.26207066, -0.28201255)
scale = Vector2(0.6996869, 1.3303616)
shape = SubResource("CapsuleShape2D_u0f2y")

[node name="AntiA" type="Sprite2D" parent="Area2D3"]
position = Vector2(-13.351699, -0.28201255)
scale = Vector2(0.08826742, 0.08604916)
texture = ExtResource("5_1opai")

[connection signal="pressed" from="UI/FinishButton" to="." method="_on_finish_button_pressed"]
[connection signal="registered" from="Area2D2" to="." method="_on_area_2d_2_registered"]
[connection signal="registered" from="Area2D4" to="." method="_on_area_2d_4_registered"]
[connection signal="registered" from="Area2D3" to="." method="_on_area_2d_3_registered"]
